@@ -1,4 +1,6 @@
 Changelog for Alias (v1.0.0-SNAPSHOT)
 
+2012-02-05 15:14:27 +0000    added check command (James Richardson)
+2012-02-05 14:19:16 +0000    Implements ManyToMany relationship (James Richardson)
 2012-02-05 13:04:44 +0000    Added skeleton structure (James Richardson)
 2012-02-05 12:14:40 +0000    initial commit (James Richardson)
